# opencl_intro

./: .gitignore  CMakeLists.txt  main.cpp
